# rangematcher

./: .gitignore  FileToVector.hpp  MatchGot.cpp  MatchGot.hpp  PatternRange.hpp  PatternRegex.hpp  PatternString.cpp  PatternVector.cpp  PatternVector.hpp  README.md  Range.hpp  main.cpp  makefile
cmake-debug/: CMakeLists.txt
cmake-release/: .gitignore  CMakeLists.txt
dev_bin/: setupDoxygen.sh  testhpp.sh
src/: Any.cpp  Any.hpp  Console.cpp  Console.hpp  FileTo.cpp  FileTo.hpp  FileToVector.cpp  FileToVector.hpp  InterpreterLua.cpp  InterpreterLua.hpp  LuaBase.cpp  LuaBase.hpp  LuaTest.cpp  LuaTest.hpp  Match.cpp  Match.hpp  MatchGot.cpp  MatchGot.hpp  MatchRange.cpp  MatchRange.hpp  NamedPatternRange.cpp  NamedPatternRange.hpp  NamingWeakOrdered.cpp  NamingWeakOrdered.hpp  NonOverlappingMatcher.cpp  NonOverlappingMatcher.hpp  Pattern.hpp  PatternRange.cpp  PatternRange.hpp  PatternRegex.cpp  PatternRegex.hpp  PatternString.cpp  PatternString.hpp  PatternVector.cpp  PatternVector.hpp  Range.hpp  RangeMatcherMethods4Lua.cpp  RangeMatcherMethods4Lua.hpp  main.cpp  tools.hpp
src/lua/: C2LuaParameter.cpp  C2LuaParameter.hpp  C2LuaParameters.cpp  C2LuaParameters.hpp  FunctionType3.cpp  FunctionType3.hpp  Lua2CParameter.cpp  Lua2CParameter.hpp  Lua2CParameters.cpp  Lua2CParameters.hpp  LuaFunction3.cpp  LuaFunction3.hpp  LuaFunction3N.cpp  LuaFunction3N.hpp  LuaFunction3NVector.cpp  LuaFunction3NVector.hpp  LuaFunction3NVector1.cpp  LuaFunction3NVector1.hpp  LuaInstance.cpp  LuaInstance.hpp  LuaParameterTraits.cpp  LuaParameterTraits.hpp  RangeMatcherLuaRuntime.cpp  RangeMatcherLuaRuntime.hpp  readParameterIntoTuple.cpp  readParameterIntoTuple.hpp  readParameterIntoTupleN.cpp  readParameterIntoTupleN.hpp  writeParameterFromTuple.cpp  writeParameterFromTuple.hpp
src/main/: main.cpp
src/tests/: main.cpp
testfiles/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007_callCFunction.lua  009_script.lua
